# gliquid_python

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: tests.yml
data/: Ag-V_ENTRIES_MP_GGA.json  Al-Cu_ENTRIES_MP_GGA.json  Al-Mg-Si_ENTRIES_MP_GGA.json  C-Nb_ENTRIES_MP_GGA.json  Cr-Eu_ENTRIES_MP_GGA.json  Cu-Mg_ENTRIES_MP_GGA.json  Ga-Ru_ENTRIES_MP_GGA.json  Pb-Tb_ENTRIES_MP_GGA.json  phase_transitions.json
data/20260217_135723/: prediction_dataset_antisymmetric.xlsx  prediction_dataset_symmetric.xlsx
data/20260217_135723/model/: L0_a_model.joblib  L0_b_model.joblib  L1_a_model.joblib  best_params.joblib  metadata.joblib  model_summary.txt  pruning_info.joblib  target_transformers.joblib
data/20260329_022905/: prediction_dataset_antisymmetric.xlsx  prediction_dataset_symmetric.xlsx
notebooks/: GaRu_adjustment.ipynb  PbTb_adjustment.ipynb  colab_demo.ipynb  fitting_demo.ipynb  hull_editor_demo.ipynb  interpolation_demo.ipynb
scripts/: CGaFeNiSi.py  production_model_runner.py  shap_compat.py
scripts/ternary_interpolation/: exec_tern_batch.py  exec_tern_single.py  extensive_hull_main.py  ternary_HSX.py
src/gliquid/: binary.py  config.py  extensive_hull_main.py  fisher_information.py  hsx.py  hsx_ternary.py  hull_editor.py  load_binary_data.py  phase_ablation.py  phase_imputation.py  production_model_runner.py
src/gliquid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_dft_data_loading.py  test_fisher_information.py  test_fitting_behavior.py  test_hsx_plot_helpers.py  test_phase_ablation.py  test_phase_imputation.py  test_plot_tx_integration.py
(+10 files in other folders)
